--- a/style.css
+++ b/style.css
@@ -36,13 +36,16 @@
     background-color: beige;
 }
 
-footer {
+.footer {
     padding: 20px;
     text-align: center;
     grid-area: footer;    
     background-color: rgb(0, 188, 212);
 }
 
+h4 {
+    position: relative;
+}
 
 @media screen and (min-width: 35em) {
     .site {
